# relative-world-ollama

./: .gitignore  README.md  pyproject.toml  try_it.py
examples/: assistant.py  interactive_queries.py  moving_around.py  moving_around_tooled.py  traders.py  weather_bot.py
examples/client/: interactive_queries.py  pydantic_response.py  weather_bot.py
examples/entities/: having_a_chat.py  interactive_queries.py  moving_around_tooled.py  tooled_locations.py  traders.py
relative_world_ollama/: client.py  entity.py  exceptions.py  json.py  location.py  responses.py  settings.py  tools.py
tests/: test_client.py  test_entity.py
