[tool.poetry]
name = "relative-world-ollama"
version = "0.1.0"
description = ""
authors = ["Tyler Evans <tyler@poorlythoughtout.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
relative-world = {git = "git@192.168.1.45:TextWorld/relative-world.git"}
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
sphinx = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
